# ska-sdp-data-product-dashboard

./: .babelrc  .dockerignore  .env  .eslintignore  .eslintrc  .gitignore  .gitlab-ci-copy.yml  .gitlab-ci.yml  .npmrc  .nycrc  .prettierignore  .readthedocs.yaml  .release  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  README.md  babel.config.js  cypress.config.cjs  cypress.config.js  docker-compose.yml  expected_env_names  index.html  jest.config.js  nginx.conf  nginx.yaml  nginx_env_config.sh  npm_deps.json  package-lock.json  package.json  pyproject.toml  setup-jest.ts  tsconfig.json  vite.config.ts  vitest.config.ts  webpack.config.js
.github/: copilot-instructions.md
charts/ska-dataproduct-dashboard/: Chart.yaml  values.yaml
charts/ska-sdp-data-product-dashboard/: Chart.yaml  README.md  values.yaml  values_local_deployment.yaml
charts/ska-sdp-dataproduct-dashboard/: CHANGELOG.rst  Chart.yaml  README.md  values.yaml  values_local_deployment.yaml
charts/vault-secret-sync/: Chart.yaml  values.yaml
cypress/data/: ExampleDataProductList.json  ExampleDataProductStatus.json  ExampleDataProductStatusAPIUnavailable.json  ExampleDataProductStatusAvailableWithSearch.json  ExampleHumanReadable.json  ExampleMetadata.json
cypress/downloads/: TestDataFile1.txt  eb-m001-20191031-12345.htm  eb-m001-20191031-12345.html
cypress/plugins/: index,js  (+1 more)
env_scripts/: env_config  env_config.sh
public/: index.html  manifest.json
src/: .babelrc  bootstrap.jsx  env.js  env.ts  index.jsx  main.tsx  setupTests.js  setupTests.ts  unit-tests.xml
tests/: TestProvider.tsx
(+196 files in other folders)
