[tool.poetry]
name = "ska-dataproduct-dashboard"
version = "0.17.0"
description = "Data Product Dashboard"
authors = ["NALEDI <naledi@sarao.ac.za>"]
license = "BSD-3-Clause"
packages = []
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[[tool.poetry.source]]
name = "skao"
url = "https://artefact.skao.int/repository/pypi-internal/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.docs.dependencies]
sphinx = "~8.1.3"
ska-ser-sphinx-theme = "^0.2.1"
sphinx-copybutton = "^0.5.2"
sphinx-new-tab-link = "^0.8.1"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
